# hatchGeneratorTestTask

./: .gitignore  CMakeLists.txt  README.md  hatch.cpp
html/: annotated.html  class_hatch-members.html  class_hatch.html  classes.html  functions.html  functions_func.html  md__r_e_a_d_m_e.html
html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_1.js  searchdata.js
latex/: annotated.tex  class_hatch.tex  md__r_e_a_d_m_e.tex  refman.tex
